Upgrade tenant host application in SystemUpgrader